add missing stylesheet link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OhMyFood | Réservez le menu qui vous convient</title>
   <meta name="description" content="Découvrez des restaurants d’exception, sélectionnés par nos soins.">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
