add document first sass tokens

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <h1>OhMyFood</h1>
+    <img src="assets/images/logo/ohmyfood@2x.svg" alt="">
   </header>
 
   <main></main>
