--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 
 <body>
 
-  <header>
-    <img src="assets/images/logo/ohmyfood@2x.svg" alt="">
+  <header class="header">
+    <a class="header__go-back" href="/" title="Revenir aux restaurants">
+      <img class="header__icon" src="assets/images/icons/arrow-left.svg" alt="">
+    </a>
+    <img class="header__logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo OhMyFood">
   </header>
 
   <main></main>
