new footer component

--- a/index.html
+++ b/index.html
@@ -20,7 +20,27 @@
 
   <main></main>
 
-  <footer>©2023</footer>
+  <footer class="footer">
+    <span class="footer__title">OhMyFood</span>
+    <nav class="footer__nav" aria-label="Navigation secondaire">
+      <ul class="nav">
+        <li class="nav__item">
+          <a class="nav__link" href="#">Proposer un restaurant</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="#">Devenir partenaire</a>
+        </li>
+      </ul>
+      <ul class="nav">
+        <li class="nav__item">
+          <a class="nav__link" href="#">Mentions légales</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="#">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </footer>
 
 </body>
 
