add icones to footer

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <nav class="footer__nav" aria-label="Navigation secondaire">
       <ul class="nav">
         <li class="nav__item">
-          <a class="nav__link" href="#">Proposer un restaurant</a>
+          <a class="nav__link" href="#"><i class="icon-ustencils" aria-hidden="true"></i> Proposer un restaurant</a>
         </li>
         <li class="nav__item">
-          <a class="nav__link" href="#">Devenir partenaire</a>
+          <a class="nav__link" href="#"><i class="icon-hands" aria-hidden="true"></i>Devenir partenaire</a>
         </li>
       </ul>
       <ul class="nav">
