--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header class="header">
     <a class="header__go-back" href="/" title="Revenir aux restaurants">
-      <img class="header__icon" src="assets/images/icons/arrow-left.svg" alt="">
+      <i class="header__icon icon-arrow-left" aria-hidden="true"></i>
     </a>
     <img class="header__logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo OhMyFood">
   </header>
