update home with location component

--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
     <img class="header__logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo OhMyFood">
   </header>
 
-  <main>
+  <main class="content">
+
+    <div class="location">
+      <i class="icon-location" aria-hidden="true"></i>
+      <span class="location__title">Lyon, France</span>
+    </div>
+
     <section id="restaurants">
       <h2>Restaurants</h2>
 
+      <!--
       <div class="card">
         <div class="card-content">
           <div class="card-content__text">
@@ -39,7 +46,6 @@
             <i class="icon-check"></i>
           </div>
         </div>
-        <!-- .card-content  -->
       </div>
 
       <div class="card">
@@ -60,8 +66,8 @@
             <i class="icon-heart-plain"></i>
           </div>
         </div>
-        <!-- .card-content  -->
       </div>
+      -->
 
     </section>
   </main>
