convert location has location search

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
   <main class="content">
 
-    <div class="location">
+    <form class="location-search">
       <i class="icon-location" aria-hidden="true"></i>
-      <span class="location__title">Lyon, France</span>
-    </div>
+      <input type="search" class="search-bar__input" value="Paris, Belleville">
+    </form>
 
     <section id="restaurants">
       <h2>Restaurants</h2>
