add section structure

--- a/index.html
+++ b/index.html
@@ -25,50 +25,18 @@
       <input type="search" class="search-bar__input" value="Paris, Belleville">
     </form>
 
-    <section id="restaurants">
+    <header class="content-header">
+      <h1>Réservez le menu qui vous convient</h1>
+      <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+      <a href="#restaurants" class="button">Explorer nos restaurants</a>
+    </header>
+
+    <section class="content-section" id="how-to">
+      <h2>Fonctionnement</h2>
+    </section>
+
+    <section class="content-section" id="restaurants">
       <h2>Restaurants</h2>
-
-      <!--
-      <div class="card">
-        <div class="card-content">
-          <div class="card-content__text">
-            <h3 class="card__title">Homard et espuma de potiron</h3>
-            <p class="card__description">Accompagnés de leur crème à la truffe</p>
-          </div>
-
-          <div class="card-content__price">
-            <span class="card__price">39€</span>
-          </div>
-
-          <input class="card-content__checkbox" id="item-id-1" type="checkbox">
-          <div class="card-content__action--add">
-            <label for="item-id-1">Ajouter ce plat</label>
-            <i class="icon-check"></i>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <figure class="card-cover">
-          <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-        </figure>
-        <div class="card-content">
-          <div class="card-content__text">
-            <h3 class="card__title">La palette du goût</h3>
-            <p class="card__description">Ménilmontant</p>
-            <a class="card__link" href="#">Voir la fiche</a>
-          </div>
-
-          <input class="card-content__checkbox" id="item-id-2" type="checkbox">
-          <div class="card-content__action--like">
-            <label for="item-id-2">Ajouter ce plat</label>
-            <i class="icon-heart"></i>
-            <i class="icon-heart-plain"></i>
-          </div>
-        </div>
-      </div>
-      -->
-
     </section>
   </main>
 
