fix base root link

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OhMyFood | Réservez le menu qui vous convient</title>
   <meta name="description" content="Découvrez des restaurants d’exception, sélectionnés par nos soins.">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
 
   <header class="header">
-    <!-- <a class="header__go-back" href="/" title="Revenir aux restaurants">
+    <!-- <a class="header__go-back" href="./" title="Revenir aux restaurants">
       <i class="header__icon icon-arrow-left" aria-hidden="true"></i>
     </a> -->
-    <img class="header__logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo OhMyFood">
+    <img class="header__logo" src="./assets/images/logo/ohmyfood@2x.svg" alt="Logo OhMyFood">
   </header>
 
   <main class="content">
@@ -54,13 +54,13 @@
       <div class="content-section__list">
         <article class="card">
           <figure class="card-cover">
-            <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+            <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
               <h3 class="card__title">La palette du goût</h3>
               <p class="card__description">Ménilmontant</p>
-              <a class="card__link" href="/restaurants/la-palette-du-gout/index.html">Voir la fiche</a>
+              <a class="card__link" href="./restaurants/la-palette-du-gout/index.html">Voir la fiche</a>
             </div>
 
             <input class="card-content__checkbox" id="restaurant-1" type="checkbox">
@@ -72,13 +72,13 @@
         </article>
         <article class="card">
           <figure class="card-cover">
-            <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+            <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
               <h3 class="card__title">La note enchantée</h3>
               <p class="card__description">Charonne</p>
-              <a class="card__link" href="/restaurants/la-note-enchantee/index.html">Voir la fiche</a>
+              <a class="card__link" href="./restaurants/la-note-enchantee/index.html">Voir la fiche</a>
             </div>
 
             <input class="card-content__checkbox" id="restaurant-2" type="checkbox">
@@ -90,13 +90,13 @@
         </article>
         <article class="card">
           <figure class="card-cover">
-            <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+            <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
               <h3 class="card__title">À la française</h3>
               <p class="card__description">Cité Rouge</p>
-              <a class="card__link" href="/restaurants/a-la-francaise/index.html">Voir la fiche</a>
+              <a class="card__link" href="./restaurants/a-la-francaise/index.html">Voir la fiche</a>
             </div>
 
             <input class="card-content__checkbox" id="restaurant-3" type="checkbox">
@@ -108,13 +108,13 @@
         </article>
         <article class="card">
           <figure class="card-cover">
-            <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+            <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
               <h3 class="card__title">Le délice des sens</h3>
               <p class="card__description">Folie-Méricourt</p>
-              <a class="card__link" href="/restaurants/folie-mericourt/index.html">Voir la fiche</a>
+              <a class="card__link" href="./restaurants/folie-mericourt/index.html">Voir la fiche</a>
             </div>
 
             <input class="card-content__checkbox" id="restaurant-4" type="checkbox">
