use srcset for images

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
       <div class="content-section__list">
         <article class="card">
           <figure class="card-cover">
-            <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+            <img sizes="(max-width: 1920px) 100vw, 1920px" srcset="
+./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_360.jpg 360w,
+./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_800.jpg 800w,
+./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1200.jpg 1200w,
+./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1920.jpg 1920w"
+              src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1920.jpg" alt="">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
@@ -72,7 +77,12 @@
         </article>
         <article class="card">
           <figure class="card-cover">
-            <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+            <img sizes="(max-width: 1920px) 100vw, 1920px" srcset="
+./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash_qpgdea_c_scale,w_360.jpg 360w,
+./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash_qpgdea_c_scale,w_800.jpg 800w,
+./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash_qpgdea_c_scale,w_1200.jpg 1200w,
+./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash_qpgdea_c_scale,w_1920.jpg 1920w"
+              src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash_qpgdea_c_scale,w_1920.jpg" alt="">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
@@ -90,7 +100,12 @@
         </article>
         <article class="card">
           <figure class="card-cover">
-            <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+            <img sizes="(max-width: 1920px) 100vw, 1920px" srcset="
+./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_o9seh6_c_scale,w_360.jpg 360w,
+./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_o9seh6_c_scale,w_800.jpg 800w,
+./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_o9seh6_c_scale,w_1200.jpg 1200w,
+./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_o9seh6_c_scale,w_1920.jpg 1920w"
+              src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_o9seh6_c_scale,w_1920.jpg" alt="">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
@@ -108,7 +123,13 @@
         </article>
         <article class="card">
           <figure class="card-cover">
-            <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+            <img sizes="(max-width: 1920px) 100vw, 1920px" srcset="
+./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash_y7wgvs_c_scale,w_360.jpg 360w,
+./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash_y7wgvs_c_scale,w_800.jpg 800W,
+./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash_y7wgvs_c_scale,w_1200.jpg 1200w,
+./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash_y7wgvs_c_scale,w_1920.jpg 1920w"
+              src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash_y7wgvs_c_scale,w_1920.jpg"
+              alt="">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
