create like component

--- a/index.html
+++ b/index.html
@@ -63,16 +63,17 @@
           </figure>
           <div class="card-content">
             <div class="card-content__text">
-              <h3 class="card__title">La palette du goût</h3>
-              <p class="card__description">Ménilmontant</p>
-              <a class="card__link" href="./restaurants/la-palette-du-gout.html">Voir la fiche</a>
+              <h3 class="card-content__title">La palette du goût</h3>
+              <p class="card-content__description">Ménilmontant</p>
+              <a class="card-content__link" href="./restaurants/la-palette-du-gout.html">Voir la fiche</a>
             </div>
-
-            <input class="card-content__checkbox" id="restaurant-1" type="checkbox">
-            <div class="card-content__action--like">
-              <label for="restaurant-1">Ajouter ce plat</label>
-              <i class="icon-heart"></i>
-              <i class="icon-heart-plain"></i>
+            <div class="card-content__like">
+              <label class="like" for="restaurant-1">
+                <span class="sr-only">Ajouter ce plat aux favoris</span>
+                <input id="restaurant-1" type="checkbox">
+                <i class="like__icon icon-heart" aria-hidden="true"></i>
+                <i class="like__icon icon-heart-plain" aria-hidden="true"></i>
+              </label>
             </div>
         </article>
         <article class="card">
@@ -86,16 +87,17 @@
           </figure>
           <div class="card-content">
             <div class="card-content__text">
-              <h3 class="card__title">La note enchantée</h3>
-              <p class="card__description">Charonne</p>
-              <a class="card__link" href="./restaurants/la-note-enchantee/index.html">Voir la fiche</a>
+              <h3 class="card-content__title">La note enchantée</h3>
+              <p class="card-content__description">Charonne</p>
+              <a class="card-content__link" href="./restaurants/la-note-enchantee/index.html">Voir la fiche</a>
             </div>
-
-            <input class="card-content__checkbox" id="restaurant-2" type="checkbox">
-            <div class="card-content__action--like">
-              <label for="restaurant-2">Ajouter ce plat</label>
-              <i class="icon-heart"></i>
-              <i class="icon-heart-plain"></i>
+            <div class="card-content__like">
+              <label class="like" for="restaurant-2">
+                <span class="sr-only">Ajouter ce plat aux favoris</span>
+                <input id="restaurant-2" type="checkbox">
+                <i class="like__icon icon-heart" aria-hidden="true"></i>
+                <i class="like__icon icon-heart-plain" aria-hidden="true"></i>
+              </label>
             </div>
         </article>
         <article class="card">
@@ -109,16 +111,17 @@
           </figure>
           <div class="card-content">
             <div class="card-content__text">
-              <h3 class="card__title">À la française</h3>
-              <p class="card__description">Cité Rouge</p>
-              <a class="card__link" href="./restaurants/a-la-francaise/index.html">Voir la fiche</a>
+              <h3 class="card-content__title">À la française</h3>
+              <p class="card-content__description">Cité Rouge</p>
+              <a class="card-content__link" href="./restaurants/a-la-francaise/index.html">Voir la fiche</a>
             </div>
-
-            <input class="card-content__checkbox" id="restaurant-3" type="checkbox">
-            <div class="card-content__action--like">
-              <label for="restaurant-3">Ajouter ce plat</label>
-              <i class="icon-heart"></i>
-              <i class="icon-heart-plain"></i>
+            <div class="card-content__like">
+              <label class="like" for="restaurant-3">
+                <span class="sr-only">Ajouter ce plat aux favoris</span>
+                <input id="restaurant-3" type="checkbox">
+                <i class="like__icon icon-heart" aria-hidden="true"></i>
+                <i class="like__icon icon-heart-plain" aria-hidden="true"></i>
+              </label>
             </div>
         </article>
         <article class="card">
@@ -133,16 +136,17 @@
           </figure>
           <div class="card-content">
             <div class="card-content__text">
-              <h3 class="card__title">Le délice des sens</h3>
-              <p class="card__description">Folie-Méricourt</p>
-              <a class="card__link" href="./restaurants/folie-mericourt/index.html">Voir la fiche</a>
+              <h3 class="card-content__title">Le délice des sens</h3>
+              <p class="card-content__description">Folie-Méricourt</p>
+              <a class="card-content__link" href="./restaurants/folie-mericourt/index.html">Voir la fiche</a>
             </div>
-
-            <input class="card-content__checkbox" id="restaurant-4" type="checkbox">
-            <div class="card-content__action--like">
-              <label for="restaurant-4">Ajouter ce plat</label>
-              <i class="icon-heart"></i>
-              <i class="icon-heart-plain"></i>
+            <div class="card-content__like">
+              <label class="like" for="restaurant-4">
+                <span class="sr-only">Ajouter ce plat aux favoris</span>
+                <input id="restaurant-4" type="checkbox">
+                <i class="like__icon icon-heart" aria-hidden="true"></i>
+                <i class="like__icon icon-heart-plain" aria-hidden="true"></i>
+              </label>
             </div>
         </article>
       </div>
